Add new method to ClientService